--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicd-test-site:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicd-test-site:${GITHUB_RUN_NUMBER}
